[metadata]
name = inkstitch
version = 2.1.2
description = Ink/Stitch: an Inkscape extension for machine embroidery design
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)

[options]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir=
    =src
packages=find:
install_requires =
    pyembroidery @ git+https://github.com/inkstitch/pyembroidery@235e5d044bc0913b2a01758935151e10d3e1db49#egg=pyembroidery
    inkscape-core-extensions @ git+https://gitlab.com/inkscape/extensions.git@3796f912f666a0981917839c77eb94fdd6fc6a94#egg=inkscape-core-extensions
    backports.functools_lru_cache
    wxPython;sys_platform!='darwin'
    wxPython @ https://github.com/ely-as/Phoenix/releases/download/wxPython-4.1.2a1-af8cca5/wxPython-4.1.2a1-cp39-cp39-macosx_10_10_universal2.whl ;sys_platform=='darwin' and python_version=='3.9'
    wxPython @ https://github.com/ely-as/Phoenix/releases/download/wxPython-4.1.2a1-af8cca5/wxPython-4.1.2a1-cp310-cp310-macosx_10_10_universal2.whl ;sys_platform=='darwin' and python_version=='3.10'
    wxPython;sys_platform=='darwin' and python_version!='3.9' or python_version!='3.10'
    networkx
    shapely <2
    lxml
    appdirs
    numpy <2
    requests
    colormath
    stringcase
    tinycss2
    flask
    fonttools
    jinja2 >2.9
    pywinutils;sys_platform=='win32'
    pywin32;sys_platform=='win32'

[options.packages.find]
where=src
