[metadata]
name = inkstitch
version = 2.1.2
description = Ink/Stitch: an Inkscape extension for machine embroidery design
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)

[options]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir=
    =src
packages=find:
install_requires =
    pyembroidery @ git+https://github.com/inkstitch/pyembroidery@83276c06291c624bfd320a33417da4e42ac05a2f#egg=pyembroidery
    inkex @ git+https://gitlab.com/inkscape/extensions.git@e44fdcbe6bcc917ef3a2164eb0c130f7276fb83f#egg=inkex
    backports.functools_lru_cache
    wxPython
    networkx
    shapely <2
    lxml
    appdirs
    numpy <2
    requests
    colormath
    stringcase
    tinycss2
    flask
    fonttools
    trimesh
    scipy
    jinja2 >2.9
    pywinutils;sys_platform=='win32'
    pywin32;sys_platform=='win32'

[options.packages.find]
where=src
